# meowtrics

./: .gitignore  Cargo.toml  DEPLOY.md  LICENSE  LICENSING.md  Makefile  README.md
.github/workflows/: ci.yml
data/: messages.json
debian/: changelog  control  copyright  postinst  postrm  rules
docs/: get.sh  index.html  messages.json  robots.txt  sitemap.xml
frontends/examples/: i3blocks.conf  polybar.ini  waybar.json
plasmoid/: metadata.json
plasmoid/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  ToolTipContent.qml  main.qml
scripts/: build-deb.sh  build-plasmoid.sh
src/: config.rs  daemon.rs  main.rs  sprites.rs
src/frontend/: mod.rs  sni.rs
src/messages/: mod.rs
src/sensors/: battery.rs  cpu.rs  disk.rs  load.rs  mod.rs  ram.rs  swap.rs  thermal.rs  uptime.rs
src/state/: mod.rs
systemd/: meowtrics.service
